--- a/first/package.json
+++ b/first/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.2.0",
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
+    "multiparty": "^4.2.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
